<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">DIorDNA_Android1</string>
    <string name="devlok_master">Devlok Master</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="noice_notes">NOICE NOTES</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_note_title">Enter Note Title</string>
    <string name="normal">Normal</string>
    <string name="important">Important</string>
    <string name="urgent">Urgent</string>
    <string name="record_audio_activity">Record Audio Activity</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="catalogue_your_notes">CATALOGUE YOUR NOTES</string>
    <string name="record">RECORD</string>
    <string name="create_note">Create Note</string>
    <string name="previous_notes">PREVIOUS NOTES</string>
    <string name="last_modified_date">Last Modified Date</string>
    <string name="play">Play</string>
    <string name="username">Username</string>
    <string name="username_1">Username</string>
    <string name="email">Email</string>
    <string name="create_notes">CREATE NOTE</string>
    <string name="priority">Priority</string>
    <string name="note_title">Note Title</string>
    <string name="record_1">Record</string>
    <string name="save">SAVE</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="upgrade_nougat">Upgrade to Nougat</string>
    <string name="give_title_to_your_note">Title</string>
    <string name="no_name">no_Name</string>
    <string name="status">Status:</string>
    <string name="start_recording_ioexception">Recording didn\'t Start</string>
    <string name="recording">Recording</string>
    <string name="profile">Profile</string>
    <string name="note">Note</string>
    <string name="home">Home</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="hi_user">Hi User</string>
    <string name="password">Password</string>
    <string name="_1">1</string>
    <string name="delete">Delete</string>
    <string name="stop_1">STOP</string>
    <string name="url">URL</string>
    <string name="uploading">Uploading…</string>
    <string name="download">Community</string>
    <string name="play_the_url">PLAY THE URL</string>
    <string name="share_your_previous_notes">SHARE YOUR PREVIOUS NOTES WITH FRIENDS</string>
    <string name="generate_url_by_clicking_on_the_share_button">Generate URL by clicking on the share button</string>
    <string name="category">category</string>

</resources>