<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_login_bg"
    tools:context=".RecorderActivity">

    <!--CREATE NOTES TEXT VIEW-->
    <TextView
        android:id="@+id/createNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/create_notes"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <!--Note Title-->
    <EditText
        android:id="@+id/noteTitleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/give_title_to_your_note"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:background="@color/textBackgroundColor"
        android:drawableLeft="@drawable/note_title"
        android:paddingHorizontal="5dp"
        android:ems="16"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/createNote"
        app:layout_constraintBottom_toTopOf="@+id/priorityLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <!--Priority Layout-->
    <LinearLayout
        android:id="@+id/priorityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/noteTitleEditText"
        app:layout_constraintBottom_toTopOf="@id/functionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--Priority TextView-->
        <TextView
            android:id="@+id/priorityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="30sp"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--Priority Label-->
        <RadioGroup
            android:id="@+id/labelRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackgroundColor"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/noteTitleEditText"
            app:layout_constraintBottom_toTopOf="@id/functionLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            >

            <!--        Urgent-->
            <RadioButton
                android:id="@+id/urgentRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urgent"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:background="@color/textBackgroundColor"
                android:buttonTint="@color/themeColor"
                android:paddingHorizontal="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp" />

            <!--        Important-->
            <RadioButton
                android:id="@+id/importantRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:background="@color/textBackgroundColor"
                android:buttonTint="@color/themeColor"
                android:paddingHorizontal="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <!--        Normal-->
            <RadioButton
                android:id="@+id/Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:checked="true"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:background="@color/textBackgroundColor"
                android:buttonTint="@color/themeColor"
                android:paddingHorizontal="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp" />

        </RadioGroup>

    </LinearLayout>

    <!--Functions Button-->
    <LinearLayout
        android:id="@+id/functionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priorityLayout">

        <!--Stop Button-->
        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:drawableTop="@drawable/red_save_icon"
            android:backgroundTint="#F0F0F0"
            android:textColor="@color/record_text_color"
            android:paddingHorizontal="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelRadioBtn" />

        <!--Start Button-->
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_1"
            android:drawableTop="@drawable/red_mic_icon"
            android:backgroundTint="#F0F0F0"
            android:textColor="@color/record_text_color"
            android:paddingHorizontal="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelRadioBtn" />

        <!--Pause Button-->
        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:drawableTop="@drawable/red_pause_icon"
            android:backgroundTint="#F0F0F0"
            android:textColor="@color/record_text_color"
            android:paddingHorizontal="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stop"
            app:layout_constraintTop_toBottomOf="@+id/labelRadioBtn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>