<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_login_bg"
    tools:context=".MainActivity">

    <!--Image ICON-->
    <ImageView
        android:id="@+id/icon"
        android:layout_width="236dp"
        android:layout_height="152dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/recordBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_icon" />

    <!--    RECORD BUTTON-->
    <Button
        android:id="@+id/recordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textBackgroundColor"
        android:drawableTop="@drawable/mic_icon"
        android:text="@string/create_note"
        android:textColor="@color/themeColor"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="17dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    PREVIOUS NOTES-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/previous_notes"
        android:textColor="#4B4D4C"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recordBtn"
        app:layout_constraintBottom_toTopOf="@+id/noteCategoryLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Note Category Layout-->
    <LinearLayout
        android:id="@+id/noteCategoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--Upper Two-->
        <LinearLayout
            android:id="@+id/upper2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <!--    URGENT BUTTON-->
            <Button
                android:id="@+id/urgentBtn"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/themeColor"
                android:text="@string/urgent"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!--    IMPORTANT BUTTON-->
            <Button
                android:id="@+id/importantBtn"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/themeColor"
                android:text="@string/important"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <!--Lower Two-->
        <LinearLayout
            android:id="@+id/lower2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <!--    NORMAL BUTTON-->
            <Button
                android:id="@+id/normalBtn"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/themeColor"
                android:text="@string/normal"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <!--Created navigation bottom using button-->
    <LinearLayout
        android:id="@+id/bottomNavigationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--Home Button-->
        <Button
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/home_icon"
            android:padding="5dp"
            android:text="Home"
            android:textColor="@color/themeColor"
            android:textSize="10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--Note Button-->
        <Button
            android:id="@+id/noteBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/mic_outline_icon"
            android:padding="5dp"
            android:text="@string/note"
            android:textColor="@color/themeColor"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile" />

        <!--Profile Button-->
        <Button
            android:id="@+id/profileBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/profile_icon"
            android:padding="5dp"
            android:text="@string/profile"
            android:textColor="@color/themeColor"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/info" />

        <!--Community Button-->

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>